module(
    name = "ghidra_import_tests",
    version = "0.1",
)

bazel_dep(name="gcc_riscv_suite", version="15.0.1.0")
bazel_dep(name="gcc_x86_64_suite", version="15.0.1.0")
bazel_dep(name = "googletest", version = "1.12.1")
bazel_dep(name = "glog", version = "0.5.0")

# We need to patch our local version of `glog` to remove
# a dependency on RTTI.  This means dynamic_cast is disabled
# in favor of static_cast

single_version_override(
  module_name = "glog",
  version = "0.5.0",
  patches = ["//:glog.pat"],
  patch_strip = 1,
)

http_archive = use_repo_rule("@@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# whisper.cpp is an open source voice-to-text inference app built on Meta's LLaMA model.
# It is a useful exemplar of autovectorization of ML code with some examples of hand-coded
# riscv intrinsics.
http_archive(
    name = "whisper_cpp",
    urls = ["https://github.com/ggerganov/whisper.cpp/archive/refs/tags/v1.7.4.tar.gz"],
    strip_prefix = "whisper.cpp-1.7.4/",
    build_file = "//:whisper-cpp.BUILD",
    sha256 = "9ce7b33028793fcbf62f81f1fd087af7778dace8772eaba8c43c66bf0c8a3eed"
)

register_toolchains(

    # a basic gcc riscv compiler suite with march=rv64gc
    "//riscv64/generated/toolchains/riscv:riscv64-gc",
    # an extended gcc riscv compiler suite with march supporting the rva23 profile
    "//riscv64/generated/toolchains/riscv:riscv64-rva23",
    # an example toolchain loaded with THead non-standard customizations
    "//riscv64/generated/toolchains/riscv:riscv64-thead",
    # a generic x86_64 toolchain
    "//x86_64/generated/toolchains/x86:x86_64-native",
)
